--- a/app.json
+++ b/app.json
@@ -9,8 +9,8 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/vckyou/Geez-UserBot",
-  "telegram": "https://t.me/VckyouuBitch",
+  "repository": "https://github.com/peoplescurity/EdoXex-UserBot",
+  "telegram": "https://t.me/Edoxex2",
   "success_url": "https://t.me/GeezSupportGroup",
   "stack": "container",
   "env": {
